--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isotope-layout": "^3.0.6",
     "next": "12.3.1",
     "node-sass": "^7.0.3",
+    "openssl": "^2.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
